--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	outline: 1px solid red;
+	/*outline: 1px solid red;*/
 }
 body{
 	background-color: #DDDDDD;
