--- a/assets/css/new_article.css
+++ b/assets/css/new_article.css
@@ -142,6 +142,19 @@
 	display: none;
 	margin-bottom: 1%;
 }
+.postImg{
+	cursor: pointer;
+}
+.postImg:hover{
+	background-color: #FFEE99;
+}
+.img_input, .img_preview{
+	display: none;
+}
+#img_preview{
+	max-width: 100%;
+	height: auto;
+}
 
 
 
