--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -110,6 +110,7 @@ body{
 	box-sizing: border-box;
 	min-height: 500px;
 	padding: 2% 2% 2%;
+	position: relative;
 }
 .info{
 	margin-top: 4%;
@@ -120,6 +121,15 @@ body{
 	border: 1px solid black;
 	position: relative;
 	top: -5px;
+}
+.read_more{
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+.read_more button{
+	width: 100%;
 }
 .pagination_container{
 	text-align: center;
