--- a/assets/css/header_front.css
+++ b/assets/css/header_front.css
@@ -1,3 +1,6 @@
+*{
+	outline: 1px solid red;
+}
 .header{
 	padding-top: 2%;
 	width: 100%;
@@ -17,6 +20,11 @@
 	height: auto;
 	max-width: 100%;
 }
+
+.member{
+	text-align: right;
+}
+
 .introList{
 	font-size: 0;
 	text-align: center;
