1. 首頁最新文章輸出
test of commit

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -89,6 +89,9 @@ body{
 .top_article ul li + li{
 	cursor: pointer;
 }
+.top_article ul li + li:hover{
+	background-color: #DDDDDD;
+}
 .content{
 	padding-top: 2%;
 	background-color: #DDDDDD;
