--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -94,8 +94,10 @@ body{
 }
 .content{
 	padding-top: 2%;
+	padding-bottom: 4.5%;
 	background-color: #DDDDDD;
 	min-height: 1500px;
+	height: auto;
 	position: relative;
 }
 .data_container{
